refactor: JPA N+1 이슈 개선 - Repository saveAll 배치 최적화
- PointUsageDetailRepositoryImpl.saveAll() 배치 저장으로 변경
  - 신규/기존 분리하여 한 번의 쿼리로 모든 기존 엔티티 조회 후 업데이트
- progress.md DDD 리팩토링 및 N+1 개선 완료 상태 업데이트