@@ -8,6 +8,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Repository;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 @Repository
@@ -31,9 +32,58 @@ public class PointUsageDetailRepositoryImpl implements PointUsageDetailRepositor
 
     @Override
     public List<PointUsageDetail> saveAll(List<PointUsageDetail> pointUsageDetails) {
-        return pointUsageDetails.stream()
-                .map(this::save)
-                .collect(Collectors.toList());
+        if (pointUsageDetails.isEmpty()) {
+            return List.of();
+        }
+
+        // 신규 저장과 업데이트 분리
+        List<PointUsageDetail> newDetails = pointUsageDetails.stream()
+                .filter(detail -> detail.getId() == null)
+                .toList();
+        List<PointUsageDetail> existingDetails = pointUsageDetails.stream()
+                .filter(detail -> detail.getId() != null)
+                .toList();
+
+        List<PointUsageDetail> result = new java.util.ArrayList<>();
+
+        // 신규 사용상세 배치 저장
+        if (!newDetails.isEmpty()) {
+            List<PointUsageDetailEntity> newEntities = newDetails.stream()
+                    .map(mapper::toEntity)
+                    .toList();
+            List<PointUsageDetailEntity> savedEntities = jpaRepository.saveAll(newEntities);
+            result.addAll(savedEntities.stream()
+                    .map(mapper::toDomain)
+                    .toList());
+        }
+
+        // 기존 사용상세 배치 업데이트 (한 번의 쿼리로 모든 엔티티 조회 후 업데이트)
+        if (!existingDetails.isEmpty()) {
+            List<Long> ids = existingDetails.stream()
+                    .map(PointUsageDetail::getId)
+                    .toList();
+
+            // 한 번의 쿼리로 모든 기존 엔티티 조회
+            Map<Long, PointUsageDetailEntity> entityMap = jpaRepository.findAllById(ids).stream()
+                    .collect(Collectors.toMap(PointUsageDetailEntity::getId, entity -> entity));
+
+            for (PointUsageDetail detail : existingDetails) {
+                PointUsageDetailEntity entity = entityMap.get(detail.getId());
+                if (entity == null) {
+                    throw new IllegalArgumentException("사용 상세를 찾을 수 없습니다: " + detail.getId());
+                }
+                // 취소 금액 차이만큼 추가
+                entity.addCanceledAmount(detail.getCanceledAmount() - entity.getCanceledAmount());
+            }
+
+            // 변경 감지에 의해 자동으로 업데이트됨 (또는 명시적 saveAll)
+            List<PointUsageDetailEntity> updatedEntities = jpaRepository.saveAll(entityMap.values().stream().toList());
+            result.addAll(updatedEntities.stream()
+                    .map(mapper::toDomain)
+                    .toList());
+        }
+
+        return result;
     }
 
     @Override
